--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightcoral;
+    background-image:url("1.jpg");
+    background-size: cover;
 }
 
 .banner h2{
-    color: #fff;
+    color: #111;
     font-size: 33px;
     font-weight: bold;
+    text-transform: capitalize;
 }
